--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
+discord.py>=2.6.0
 Pillow>=9.0.0
+aiohttp>=3.8.0
+python-dotenv>=0.19.0
+transformers>=4.30.0
+torch>=2.0.0
+matplotlib>=3.5.0
+numpy>=1.21.0
